--- a/css/style.scss
+++ b/css/style.scss
@@ -1730,9 +1730,20 @@ a{
 
 }/*CLOSES #PORTFOLIO-PAGE*/
 
+#home-press{
+#press-page{
 
-
-
+  .portfolio-container{
+    li{
+      a{
+        .article-container{
+          height: 200px;
+        }
+      }
+    }
+  }
+}
+}
 
 
 
@@ -3016,6 +3027,27 @@ box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, .2);
 
 
 /* END NAV */
+
+
+
+
+
+#home-press{
+#press-page{
+
+  .portfolio-container{
+    li{
+      a{
+        .article-container{
+          height: 140px;
+        }
+      }
+    }
+  }
+}
+}
+
+
 
 
 #gallery{
