--- a/css/style.css
+++ b/css/style.css
@@ -1779,9 +1779,13 @@ article {
     width: 100vw; }
 
   #container-1 .video-background {
-    left: 0vw;
-    width: 100vw;
-    height: auto; }
+    left: -16vw;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: auto;
+    height: 100vh; }
 
   #property-landing #container-1 video {
     left: -10vw;
@@ -2025,6 +2029,15 @@ article {
       background-color: #f1f1f1; }
 
   /* END NAV */
+  #container-1 .video-background {
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 100vw;
+    height: auto; }
+
   #home-press #press-page .portfolio-container li a .article-container {
     height: 140px; }
 
