--- a/css/style.scss
+++ b/css/style.scss
@@ -1656,7 +1656,8 @@ a{
       overflow: hidden;
     }
     p{
-      font-family: Gotham;
+      font-family: gotham;
+      font-weight: 300;
       font-size: 14px;
     }
   }
