--- a/css/style.scss
+++ b/css/style.scss
@@ -1629,6 +1629,11 @@ li{
 #portfolio-page{
 .filters{
   padding-left: 0;
+  li{
+    a{
+    letter-spacing: 3px;
+  }
+  }
 }
 
   float: left;
@@ -1691,6 +1696,7 @@ a{
       a{
         color: gray;
         text-decoration: none;
+        letter-spacing: 3px;
       }
     }
   }
@@ -2283,7 +2289,7 @@ h5{
 
 
 #container-2{
-  padding-top: 25vh;
+  padding-bottom: 12.5vh;
   .copy-container{
     padding-top: 2.5vh;
     padding-bottom: 2.5vh;
