--- a/css/style.css
+++ b/css/style.css
@@ -1217,6 +1217,11 @@ footer {
       float: left; }
       #home-press #press-page .portfolio-container li a .article-container {
         height: 200px; }
+        #home-press #press-page .portfolio-container li a .article-container h3 {
+          font-family: gotham;
+          font-weight: 900; }
+        #home-press #press-page .portfolio-container li a .article-container p {
+          font-family: gotham; }
 
 /* ----------------------------------------------------------------- */
 /* BEGINS PROPERTY LANDING */
