--- a/css/style.css
+++ b/css/style.css
@@ -713,7 +713,8 @@ footer {
   overflow: hidden;
   margin-bottom: 15vh; }
   #half-screen .copy-container {
-    margin-top: 75px;
+    margin-top: 25px;
+    padding-bottom: 25px;
     float: left; }
   #half-screen h2 {
     margin-top: 75px;
@@ -1823,6 +1824,13 @@ article {
       height: 100vh; }
   #property-landing .carousel-inner {
     height: 100vh !important; }
+
+  #half-screen {
+    min-height: 15vh; }
+    #half-screen .copy-container {
+      margin-top: 75px;
+      padding-bottom: 50px;
+      float: left; }
 
   #article p {
     margin-top: 15px; }
